--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -10,6 +10,10 @@ en:
       # html: '<abbr title="required">*</abbr>'
     error_notification:
       default_message: "Please review the problems below:"
+    buttons:
+      new_comment: 'Add comment'
+      reply_comment: 'Send'
+      new_post: 'Add post'
     # Examples
     # labels:
     #   defaults:
